# InterviewBlank

./: .gitignore  CMakeLists.txt  README.MD  build.gradle.kts  gradle.properties
src/main/cpp/: HelloWorld.cpp  HelloWorld.hpp
src/main/java/: HelloWord.java  HelloWorld.java
src/test/cpp/: HelloWorldTest.cpp
src/test/java/: HelloWorldTest.java
